--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@ __pycache__/
 *.pyc
 .vscode/
 .DS_Store
+
+# ESP-IDF build outputs
+esp32/build/
+esp32/sdkconfig
+esp32/sdkconfig.old
+esp32/project_description.json
