Set up both Pan and tilt servos

--- a/esp32/main/CMakeLists.txt
+++ b/esp32/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "argus_esp.cpp"
+idf_component_register(SRCS "argus_esp.cpp" "servo.cpp"
                     INCLUDE_DIRS ".")
